src/objects/Activity.object
<CustomObject>
    <fields>
        <fullName>Pr_ximos_pasos__c</fullName>
        <description>Se mencionarán lo pasos a seguir una vez concluida la visita.</description>
        <encryptionScheme>None</encryptionScheme>
        <label>Próximos pasos</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Quien_te_acompa_o__c</fullName>
        <description>¿Quién te acompaño a la visita o actividad?</description>
        <inlineHelpText>¿Quién te acompaño a la visita o actividad?</inlineHelpText>
        <label>¿Quién te acompaño?</label>
        <type>MultiselectPicklist</type>
        <valueSet>
            <controllingField>Te_acompa_aron__c</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Director Divisional</fullName>
                </value>
                <value>
                    <fullName>Director Regional/Centro Corporativo</fullName>
                </value>
                <value>
                    <fullName>Director de Oficina</fullName>
                </value>
                <value>
                    <fullName>Director Banca Mayorista</fullName>
                </value>
                <value>
                    <fullName>Director Red EyGH</fullName>
                </value>
                <value>
                    <fullName>Director Banca Hipotecaria</fullName>
                </value>
                <value>
                    <fullName>Director Promoción Empresarial</fullName>
                </value>
                <value>
                    <fullName>Especialista Arrendamiento/Cadenas valor</fullName>
                </value>
                <value>
                    <fullName>Especialista Cash Management</fullName>
                </value>
                <value>
                    <fullName>Especialista CIB</fullName>
                </value>
                <value>
                    <fullName>Especialista Comercio Internacional</fullName>
                </value>
                <value>
                    <fullName>Especialista de la Banca Electrónica</fullName>
                </value>
                <value>
                    <fullName>Especialista Financiamiento</fullName>
                </value>
                <value>
                    <fullName>Especialista Inversiones</fullName>
                </value>
                <value>
                    <fullName>Especialista Plan Piso</fullName>
                </value>
                <value>
                    <fullName>Especialista Promoción Fiduciario</fullName>
                </value>
                <value>
                    <fullName>Especialista Promoción Nómina</fullName>
                </value>
                <value>
                    <fullName>Especialista Seguros</fullName>
                </value>
                <value>
                    <fullName>Especialista Venta y Soporte Adquirente</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resultado_de_Contacto__c</fullName>
        <label>Resultado de Contacto</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Tipo_de_Contacto__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Promesa de Pago</fullName>
                </value>
                <value>
                    <fullName>No Define Pago</fullName>
                </value>
                <value>
                    <fullName>Desea Cancelar</fullName>
                </value>
                <value>
                    <fullName>No Reconoce Producto</fullName>
                </value>
                <value>
                    <fullName>Contestadora</fullName>
                </value>
                <value>
                    <fullName>Deja Mensaje</fullName>
                </value>
                <value>
                    <fullName>Titular Fallecio</fullName>
                </value>
                <value>
                    <fullName>Se Agenda</fullName>
                </value>
                <value>
                    <fullName>No Contesta</fullName>
                </value>
                <value>
                    <fullName>Cuenta Pagada</fullName>
                </value>
                <value>
                    <fullName>Póliza Cancelada</fullName>
                </value>
                <value>
                    <fullName>Ilocalizable</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resultado_de_la_visita__c</fullName>
        <description>En caso de que la tarea sea una visita calificarla de 0 a 100</description>
        <label>Resultado de la visita</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Ninguno</fullName>
                    <default>true</default>
                    <label>Ninguno</label>
                </value>
                <value>
                    <fullName>0%</fullName>
                </value>
                <value>
                    <fullName>10%</fullName>
                </value>
                <value>
                    <fullName>20%</fullName>
                </value>
                <value>
                    <fullName>30%</fullName>
                </value>
                <value>
                    <fullName>40%</fullName>
                </value>
                <value>
                    <fullName>50%</fullName>
                </value>
                <value>
                    <fullName>60%</fullName>
                </value>
                <value>
                    <fullName>70%</fullName>
                </value>
                <value>
                    <fullName>80%</fullName>
                </value>
                <value>
                    <fullName>90%</fullName>
                </value>
                <value>
                    <fullName>100%</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Resultado_llamada__c</fullName>
        <description>Permite definir el resultado de la llamada</description>
        <label>Resultado llamada</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>No contesta</fullName>
                </value>
                <value>
                    <fullName>No define pago</fullName>
                </value>
                <value>
                    <fullName>Contestadora</fullName>
                </value>
		<value>
                    <fullName>Contacto</fullName>
                </value>
                <value>
                    <fullName>No Contacto</fullName>
                    <label>No contacto</label>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Switch_de_Sincronizacion__c</fullName>
        <defaultValue>false</defaultValue>
        <description>Campo utilizado en trigger para detectar si el registro requiere ser sincronizado hacia Google. Si el valor cambia durante la actualización entonces la sincronización no se lleva a cabo, de lo contrario la sincronización debe llevarse a cabo. (Es irrelevante el valor con el que quede el registro, solo sirve para detectar si existe un cambio y si se debe sincronizar o no con Goolgle)</description>
        <label>Switch de Sincronización</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Tamanio_de_portafolio__c</fullName>
        <formula>Owner:User.No_Grupos_ClientesHuerfanos__c</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Tamaño de portafolio</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Te_acompa_aron__c</fullName>
        <description>Campo booleano para registrar si hubo acompañantes a la visita</description>
        <inlineHelpText>Registra si fuiste acompañado a tu visita</inlineHelpText>
        <label>¿Te acompañaron?</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Status</controllingField>
            <valueSetDefinition>
                <value>
                    <fullName>Si</fullName>
                </value>
                <value>
                    <fullName>No</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Telefono__c</fullName>
        <label>Teléfono</label>
        <type>Phone</type>
    </fields>
    <fields>
        <fullName>Tipo_de_Contacto__c</fullName>
        <label>Tipo de Contacto</label>
        <type>Picklist</type>
        <valueSet>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Contacto Útil</fullName>
                </value>
                <value>
                    <fullName>Contacto Efectivo</fullName>
                </value>
                <value>
                    <fullName>Contacto No Efectivo</fullName>
                </value>
		<value>
                    <fullName>No Contacto</fullName>
                    <label>No contacto</label>
                </value>
		<value>
                    <fullName>Interesado</fullName>
                </value>
                <value>
                    <fullName>No Aplica (CNE)</fullName>
                </value>
                <value>
                    <fullName>No Aplica</fullName>
                </value>
                <value>
                    <fullName>No Interesado</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_llamada__c</fullName>
        <label>Tipo de llamada</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Input</fullName>
                    <default>true</default>
                    <label>Input</label>
                </value>
                <value>
                    <fullName>OutBound</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Tipo_de_Resultado_de_Contacto__c</fullName>
        <label>Tipo de Resultado de Contacto</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Resultado_de_Contacto__c</controllingField>
            <restricted>true</restricted>
            <valueSetDefinition>
                <value>
                    <fullName>Otro</fullName>
                </value>
                <value>
                    <fullName>Pago TPV</fullName>
                </value>
                <value>
                    <fullName>Pago TPV / Endoso</fullName>
                </value>
                <value>
                    <fullName>Endoso</fullName>
                </value>
                <value>
                    <fullName>Fecha de Pago</fullName>
                </value>
                <value>
                    <fullName>No Tiene Dinero</fullName>
                </value>
                <value>
                    <fullName>Acudira a Sucursal</fullName>
                </value>
                <value>
                    <fullName>Se Corta Llamada</fullName>
                </value>
                <value>
                    <fullName>Venta de Unidad</fullName>
                </value>
                <value>
                    <fullName>Cuenta con Otra Póliza</fullName>
                </value>
                <value>
                    <fullName>No Le Interesa El Seguro</fullName>
                </value>
                <value>
                    <fullName>Mal Trato Por Multiasistencia</fullName>
                </value>
                <value>
                    <fullName>Ya Realizo Tramite de Cancelación</fullName>
                </value>
                <value>
                    <fullName>Duplicidad de Póliza por Sucursal</fullName>
                </value>
                <value>
                    <fullName>Nunca Contrato el Seguro</fullName>
                </value>
                <value>
                    <fullName>Telefono Ocupado</fullName>
                </value>
                <value>
                    <fullName>No se Puede Dejar Mensaje</fullName>
                </value>
                <value>
                    <fullName>No Vive Ahí</fullName>
                </value>
                <value>
                    <fullName>Numero No Existe</fullName>
                </value>
                <value>
                    <fullName>Linea Con Servicio de Internet</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Triger_Time_15__c</fullName>
        <formula>(NOW()-0.03109)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Triger Time 15</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Triger_Time_30__c</fullName>
        <formula>(NOW()-0.02073)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Triger Time 30</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>Triger_Time_45__c</fullName>
        <formula>(NOW()-0.01036)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Triger Time 45</label>
        <type>DateTime</type>
    </fields>
    <fields>
        <fullName>UG_Usuario__c</fullName>
        <formula>Owner:User.UG__c</formula>
        <label>UG Usuario</label>
        <type>Text</type>
    </fields>
    <listViews>
        <fullName>MyActivities</fullName>
        <columns>ACTIVITY_SUBTYPE</columns>
        <columns>TASK.STATUS</columns>
        <columns>TASK.SUBJECT</columns>
        <columns>TASK.DUE_DATE</columns>
        <columns>TASK.WHAT_NAME</columns>
        <columns>TASK.WHO_NAME</columns>
        <columns>EVENT.LOCATION</columns>
        <filterScope>Mine</filterScope>
        <label>My Activities</label>
    </listViews>
    <listViews>
        <fullName>MyDelegatedActivities</fullName>
        <filterScope>Delegated</filterScope>
        <label>My Delegated Activities</label>
    </listViews>
    <listViews>
        <fullName>MyTeamsActivities</fullName>
        <filterScope>Team</filterScope>
        <label>My Team&apos;s Activities</label>
    </listViews>
    <listViews>
        <fullName>TodaysTasks</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>TASK.CLOSED</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>1</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>lessThan</operation>
            <value>TOMORROW</value>
        </filters>
        <label>Today&apos;s Tasks</label>
    </listViews>
    <listViews>
        <fullName>UpcomingEvents</fullName>
        <filterScope>Mine</filterScope>
        <filters>
            <field>ACTIVITY.TASK</field>
            <operation>equals</operation>
            <value>0</value>
        </filters>
        <filters>
            <field>TASK.DUE_DATE</field>
            <operation>greaterThan</operation>
            <value>YESTERDAY</value>
        </filters>
        <label>Upcoming Events</label>
    </listViews>
    <sharingModel>Private</sharingModel>
</CustomObject>